--- a/html-css/lesson 2/accounting.html
+++ b/html-css/lesson 2/accounting.html
@@ -69,16 +69,16 @@
         <hr>
         <label for="">
           Блюда какой кухни предпочитаете?<br>
-          <input type="checkbox" name="" value="1">Японская<br>
-          <input type="checkbox" name="" value="2">Русская<br>
-          <input type="checkbox" name="" value="3">Своя<br>
+          <input type="checkbox" name="food" value="1">Японская<br>
+          <input type="checkbox" name="food" value="2">Русская<br>
+          <input type="checkbox" name="food" value="3">Своя<br>
         </label>
         <hr>
         <label for="">
           Какой цвет носков предпочитаете?<br>
-          <input type="radio" name="" value="">Серые<br>
-          <input type="radio" name="" value="">Белые<br>
-          <input type="radio" name="" value="">Черные<br>
+          <input type="radio" name="socks" value="">Серые<br>
+          <input type="radio" name="socks" value="">Белые<br>
+          <input type="radio" name="socks" value="">Черные<br>
         </label>
         <hr>
         <label for="">
