--- a/html-css/lesson 5/index.html
+++ b/html-css/lesson 5/index.html
@@ -11,40 +11,113 @@
       <tr>
         <td>
           <header>
+            <table>
+              <tr>
+                <td rowspan="2" class="header_title_logo"></td>
+                <td rowspan="2" class="header_title_text">Lipsum</td>
+                <td rowspan="2" class="header_title_line"></td>
+                <td class="header_title_text_main">Lorem ipsum dolor sit amet</td>
+              </tr>
+              <tr>
+                <td class="header_title_text_slave">consectetur adipiscing elit, imperdiet erat sed libero posuere  quis convallis</td>
+              </tr>
+            </table>
           </header>
         </td>
       </tr>
       <tr>
         <td>
           <nav class="menu_links">
+            <table>
+              <tr>
+                <td><a href="#">HOME</a></td>
+                <td><a href="#">products</a></td>
+                <td><a href="#">news</a></td>
+                <td><a href="#">about us</a></td>
+                <td><a href="#">contact us</a></td>
+              </tr>
+            </table>
           </nav>
         </td>
       </tr>
       <tr>
         <td>
           <article class="">
+            <br><br>
+            <table>
+              <tr class="content_block1_title">
+                <td colspan="6">featured products</td>
+              </tr>
+              <tr>
+                <td rowspan="2" colspan="3" id="content_block1_img1"></td>
+                <td rowspan="4"></td>
+                <td colspan="2" id="content_block1_img2"></td>
+              </tr>
+              <tr>
+                <td colspan="2">The mission of Orlin Research, Inc. is to produce software product. Vivamus vel posuere est. Suspendisse potenti. Aenean ultrices urna ex, sit amet laoreet elit condimentum a.</td>
+              </tr>
+              <tr>
+                <td id="content_block1_arrowl"></td>
+                <td id="content_block1_sm_text">Lipsum comoodo Manager</td>
+                <td id="content_block1_arrowr"></td>
+              </tr>
+              <tr>
+                <td colspan="5"></td>
+                <td class="content_block1_more_main"><span class="content_block1_more">More &gt</span></td>
+              </tr>
+            </table>
+            <br><br>
+            <table>
+              <tr>
+                <td class="content_block2_top_line"></td>
+              </tr>
+              <tr>
+                <td>Something maybe will be here later...</td>
+              </tr>
+              <tr>
+                <td>Praesent vitae suscipit odio. Phasellus at nisi in massa accumsan volutpat. Nunc placerat viverra vehicula. In lectus metus, venenatis nec pharetra eget, auctor sed massa. Curabitur accumsan pharetra dui vel tristique. Proin dictum nisl tellus, et posuere nisl pretium in. Cras vel aliquam lorem. Quisque finibus tellus velit, sed euismod felis bibendum vitae. Nullam non scelerisque erat. Proin bibendum elit ante, nec condimentum quam accumsan nec. Curabitur sit amet enim pellentesque, sagittis sapien vel, mollis mauris. Donec sed erat tortor. Fusce consequat dignissim lectus id pharetra. Sed et dignissim sapien, id rhoncus tellus. Morbi nec neque rhoncus, accumsan libero nec, mollis metus. Integer sagittis massa quis nulla pretium, id condimentum lorem tempor.</td>
+              </tr>
+            </table>
+            <br><br>
+            <table>
+              <tr>
+                <td class="clients_top_cell"></td>
+                <td rowspan="2" class="clients_top_text">our clients</td>
+                <td class="clients_top_cell"></td>
+              </tr>
+              <tr>
+                <td class="clients_top_line_small"></td>
+                <td class="clients_top_line_big"></td>
+              </tr>
+              <tr>
+                <td colspan="3" id="clients_content"></td>
+              </tr>
+              <tr>
+                <td colspan="3" class="clients_bottom_line"></td>
+              </tr>
+            </table>
           </article>
         </td>
       </tr>
       <tr>
         <td>
           <footer>
-            <table id="footer" class="footer_text">
+            <table id="footer">
               <tr>
                 <th colspan="4" class="footer_title_logo"></th>
                 <th colspan="3" class="footer_title_text">Lipsum</th>
               </tr>
-              <tr>
-                <td>HOME | </td>
-                <td>ABOUT US | </td>
-                <td>WORK | </td>
-                <td>SERVICES | </td>
-                <td>RESOURCES | </td>
-                <td>ARTICLES | </td>
-                <td>CONTACT</td>
+              <tr class="footer_links">
+                <td><a href="#">HOME | </a></td>
+                <td><a href="#">ABOUT US | </a></td>
+                <td><a href="#">WORK | </a></td>
+                <td><a href="#">SERVICES | </a></td>
+                <td><a href="#">RESOURCES | </a></td>
+                <td><a href="#">ARTICLES | </a></td>
+                <td><a href="#">CONTACT</a></td>
               </tr>
-              <tr>
-                <td colspan="7">@2017 Funtik Research, Inc </td>
+              <tr class="footer_text">
+                <td colspan="7">&copy 2017 Funtik Research, Inc </td>
               </tr>
             </table>
           </footer>
